creusot/tests/should_fail/prusti/calls/fin_cur.stderr
error[creusot]: `'a` must match the current time slice `'curr`
 --> fin_cur.rs:7:9
  |
7 |     fin(x)
  |         ^

error: aborting due to previous error

